<resources>
    <string name="app_name">Strong Password Creator</string>
    <string name="first_run_key" translatable="false">first_run_key</string>
    <string name="content_authority" translatable="false">com.conz13.d.strongpasswordcreator.provider</string>
    <string name="database_password_method" translatable="false">setPASSWORD</string>
    <string name="generation_fragment_tag" translatable="false">generation_fragment</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="my_locker">My Locker</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="nav_header">Navigation drawer header image</string>
    <string name="delete_list">Delete all</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="save_dialog_title">Save your strong password</string>
    <string name="save_dialog_positive">Save</string>
    <string name="save_dialog_negative">Cancel</string>
    <string name="save_dialog_tag" translatable="false">save_dialog</string>
    <string name="save_dialog_password_key" translatable="false">password_array_list_key</string>
    <string name="save_dialog_header_empty">Header field can not be empty</string>
    <string name="save_dialog_password_empty">Password field can not be empty</string>
    <string name="save_dialog_header_not_unique">That header name is already in use</string>
    <string name="save_dialog_header_hint">Header (ex: Example.com)</string>
    <string name="save_dialog_username_hint">Username (Optional)</string>
    <string name="save_dialog_password_hint">Strong Password</string>
    <string name="save_dialog_password_add_info_hint">Additional Info (Optional)</string>
    <string name="save_dialog_snackbar">Strong Password saved!</string>
    <string name="save_dialog_snackbar_skip_mode">Can\'t save without signing in</string>
    <string name="delete_all_title">Delete list</string>
    <string name="delete_all_message">Are you sure you want to delete the list?</string>
    <string name="delete_all_positive">Delete all</string>
    <string name="delete_all_negative">Cancel</string>
    <string name="delete_title">Delete</string>
    <string name="delete_message">Are you sure you want to delete this entry? This cannot be reversed!</string>
    <string name="delete_positive">Delete</string>
    <string name="delete_negative">Cancel</string>
    <string name="wheel_view_content_description">Dice wheel.</string>
    <string name="roll_button_text">Roll!</string>
    <string name="roll_button_content_description">Button to roll the dice</string>
    <string name="resultant_word_content_description">Resultant word</string>
    <string name="move_button_content_description">Drag to move item up or down in the list</string>
    <string name="delete_button_content_description">Press to delete list item</string>
    <string name="add_to_list_button_content_description">Press to add word to list below</string>
    <string name="dice_array_key" translatable="false">dice_array</string>
    <string name="words_list_key" translatable="false">string_array_list</string>
    <string name="locker_fragment_tag" translatable="false">locker_fragment_tag</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="additional_info_label">Additional Info:</string>
    <string name="edit_button_content_description">Edit content</string>
    <string name="locker_empty_text_view">Saved passwords will appear here</string>
    <string name="locker_empty_skipped">Log in to view saved passwords here</string>
    <string name="edit_toolbar_label">Edit Mode</string>
    <string name="edit_fragment_tag" translatable="false">edit_fragment_tag</string>
    <string name="edit_save_button">Save</string>
    <string name="edit_delete_button">Delete</string>
    <string name="edit_delete_button_content_description">Button to delete the current entry</string>
    <string name="intent_extra_header" translatable="false">header_intent_extra</string>
    <string name="intent_extra_user" translatable="false">user_intent_extra</string>
    <string name="intent_extra_pass" translatable="false">pass_intent_extra</string>
    <string name="intent_extra_add_info" translatable="false">add_info_intent_extra</string>
    <string name="intent_extra_id" translatable="false">id_intent_extra</string>
    <string name="previous_header_key" translatable="false">previous_header_key</string>
    <string name="edit_snackbar_key" translatable="false">snackbar_key</string>
    <string name="edit_snackbar_save">Strong Password saved!</string>
    <string name="edit_snackbar_delete">Strong Password deleted</string>
    <string name="edit_shared_content_transition_tag">sharedCardView</string>
    <string name="disable_dice_animation_key" translatable="false">disable_dice_animation_key</string>
    <string name="disable_dice_animation_title">Dice roll animation</string>
    <string name="disable_dice_animation_summary">Dice roll animation enabled</string>
    <string name="change_password_title">Change login password</string>
    <string name="change_password_key" translatable="false">change_password_key</string>
    <string name="change_password_current">Current password</string>
    <string name="change_password_new">New password</string>
    <string name="change_password_new_confirm">Re-type new password</string>
    <string name="change_password_positive">Submit</string>
    <string name="change_password_negative">Cancel</string>
    <string name="change_password_current_equals_new">New password must be different than current password</string>
    <string name="change_password_current_is_wrong">Current password is incorrect</string>
    <string name="change_password_confirm_pass_is_wrong">Password entered does not match new password</string>
    <string name="change_password_empty">Field can not be empty</string>
    <string name="change_password_dialog_tag" translatable="false">change_password_dialog_tag</string>
    <string name="change_language_key" translatable="false">change_language_key</string>
    <string name="change_language_title">Change diceware list language</string>
    <string name="change_language_default">_en</string>
    <string name="change_language_dialog_title">Choose a language</string>
    <string-array name="diceware_languages_entries">
        <item>Catalan</item>
        <item>Danish</item>
        <item>Dutch</item>
        <item>English</item>
        <item>Esperanto</item>
        <item>Finnish</item>
        
        <item>German</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Maori</item>
        <item>Norwegian</item>
        
        
        <item>Spanish</item>
        <item>Swedish</item>
        <item>Turkish</item>
    </string-array>
    <string-array name="diceware_languages_values">
        <item>_ca</item>
        <item>_da</item>
        <item>_nl</item>
        <item>_en</item>
        <item>_eo</item>
        <item>_fi</item>
        
        <item>_de</item>
        <item>_it</item>
        <item>_jp</item>
        <item>_mi</item>
        <item>_no</item>
        
        
        <item>_es</item>
        <item>_sv</item>
        <item>_tr</item>
    </string-array>
    <string name="about_key" translatable="false">about_key</string>
    <string name="about_title">About</string>
    <string name="about_summary">Learn more about diceware</string>
    <string name="about_diceware_title">About Diceware</string>
    <string name="about_diceware_body">Diceware was created by Arnold G. Reinhold. More information
        on the theory and mathematics behind it can be found on his website http://www.world.std.com/~reinhold/diceware.html</string>
    <string name="about_diceware_list_creators">The creators of the alternate language lists can be found
        listed on Arnold\'s website under \"Diceware in Other Languages\".</string>
    <string name="about_app">About This App</string>
    <string name="about_app_body">This app was created by Dillon Connolly as a final project for the
        Udacity android nanodegree course. It uses an encrypted database to store passwords locally
        so passwords are safe from prying eyes. I do not recommend storing vital passwords solely in this app
        because if your device is lost or stolen you will not be able to recover them. If you encrypt a filesystem and lose
        the password for it because it was only stored in this app you will likely never decrypt that filesystem. If a feature
        that you want is not present in the app, send some feedback and I will add it!</string>
    <string name="about_password_strength">Password Strength</string>
    <string name="about_password_strength_body">Password strength is measured in entropy. When talking
        about passwords, entropy is the number of guesses that a brute force approach to hacking would take to exhaust
        all possible word combinations. Password entropy is measured using a base-2 logarithm. This means that each single
        increase in entropy value makes the password significantly more secure. An easy way to increase password entropy
        is simply to increase the amount of characters in your password. In theory a password that is 20 characters long
        is much more secure than a password that is 8 characters long. Using diceware also increases the password strength
        because the words are truly random. It is not advised to create your own password with random words that you think of
        as it will be less secure.</string>
    <string name="about_feedback">Feedback</string>
    <string name="login_header">Unlock Strong Password Creator</string>
    <string name="login_button">Login</string>
    <string name="login_edit_text">Password</string>
    <string name="login_checkbox">Show password</string>
    <string name="login_skip_button">Skip</string>
    <string name="tutorial_intro_question">Making a strong password is hard</string>
    <string name="tutorial_actually">We have been taught to make passwords that are hard for humans to remember and easy for computers to crack.</string>
    <string name="tutorial_entropy_def">Password strength is measured with entropy</string>
    <string name="tutorial_entropy_example">\"Ur3/5fop!23\" has an entropy of ~48.5 bits. This low of an entropy value can be cracked in just three days at one billion guesses per second.</string>
    <string name="tutorial_time_to_crack_example">\"Ur3/5fop!23\" can be cracked in just three days at one billion guesses per second.</string>
    <string name="tutorial_diceware">Introducing Diceware</string>
    <string name="tutorial_diceware_explanation">Diceware is a method of password generation in which a dice is rolled to produce a five digit number that correlates to a word in the Diceware passphrase list.</string>
    <string name="tutorial_diceware_example">A password such as \"21st onyx hawk pear filler\" generated using Diceware has an entropy of ~107.4 bits
        which would take ~2.6 quadrillion years to crack at one billion guesses per second.</string>
    <string name="tutorial_get_started">Let\'s get started</string>
    <string name="tutorial_set_password">Set your password that will be used to encrypt your stored passwords and to login to the app (don\'t forget it!)</string>
    <string name="tutorial_button">Save</string>
    <string name="tutorial_image_1_content_description">A man trying to think of a strong password.</string>
    <string name="tutorial_image_3_content_description">A hacker waiting forever to crack a strong password.</string>
</resources>