<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <!-- TODO: set background image as screenshot of main screen but blurred -->

    <TextView
        android:id="@+id/login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/login_header"/>

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardElevation="3dp"
        app:cardCornerRadius="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/login_edit_text" />

        </android.support.design.widget.TextInputLayout>
        <CheckBox
            android:id="@+id/login_show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_holder"
            android:text="@string/login_checkbox"
            android:onClick="setPasswordTextVisibility"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_show_password"
            android:text="@string/login_button"
            android:onClick="login"/>
        <Button
            android:id="@+id/login_skip_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:text="@string/login_skip_button"
            android:onClick="skip"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>