<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_get_started"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_password_header"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_set_password"/>
    <android.support.v7.widget.CardView
        android:id="@+id/login_card_view"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardElevation="3dp"
        app:cardCornerRadius="3dp"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_text_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/create_pass_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:hint="@string/login_edit_text" />

            </android.support.design.widget.TextInputLayout>
            <CheckBox
                android:id="@+id/create_pass_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_holder"
                android:text="@string/login_checkbox"
                android:onClick="setPasswordTextVisibility"/>

            <Button
                android:id="@+id/create_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/create_pass_show_password"
                android:text="@string/tutorial_button"
                android:onClick="createDbLoginPassword"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>