<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <ImageView
        android:id="@+id/tutorial_image_3"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tutorial_3_text_2"
        android:contentDescription="@string/tutorial_image_3_content_description"
        android:src="@drawable/tutorial_hacker_old_page3" />

    <TextView
        android:id="@+id/tutorial_3_text_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        style="@style/tutorial_header_text"
        android:text="@string/tutorial_diceware"/>

    <TextView
        android:id="@+id/tutorial_3_text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tutorial_3_text_1"
        android:gravity="center_vertical"
        style="@style/tutorial_body_text"
        android:text="@string/tutorial_diceware_explanation"/>

    <TextView
        android:id="@+id/tutorial_3_text_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:layout_below="@+id/tutorial_image_3"
        android:gravity="center_vertical"
        style="@style/tutorial_body_text"
        android:text="@string/tutorial_diceware_example"/>

</RelativeLayout>