<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <ImageView
        android:id="@+id/tutorial_image_1"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:alpha="0.9"
        android:src="@drawable/tutorial_thinking_page1"
        android:contentDescription="@string/tutorial_image_1_content_description"/>
    <TextView
        android:id="@+id/header_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:layout_below="@+id/tutorial_image_1"
        android:gravity="center_vertical"
        style="@style/tutorial_header_text"
        android:text="@string/tutorial_intro_question"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="14dp"
        android:layout_below="@id/header_1"
        android:gravity="center_vertical"
        style="@style/tutorial_body_text"
        android:text="@string/tutorial_actually"/>

</RelativeLayout>